<resources>
    <string name="app_name">Weather App</string>
    <string name="tbilisi">TBILISI</string>
    <string name="london">LONDON</string>
    <string name="kingston">KINGSTON</string>
    <string name="today">today</string>
    <string name="hourly">hourly</string>
    <string name="empty"> </string>
    <string name="details">DETAILS</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="weather_url">https://api.openweathermap.org/data/2.5/</string>
    <string name="api_key">9c5807b556adb3afb6e9a46bbd025858</string>
    <string name="units">metric</string>
    <string name="icon_description">ICON DESCRIBING WEATHER</string>
    <string name="georgia_flag">GEORGIA FLAG</string>
    <string name="uk_flag">UK FLAG</string>
    <string name="jamaica_flag">JAMAICA FLAG</string>
</resources>